--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,7 @@ a {
   --bg-black: #111; 
   --bg-white: #fEfEfE; 
   --text-light: #FFF; 
+  --text-light-2: #EDEDEF; 
   --mic-compare: #fDfDfD;
   --logo-height: 100px;
   --header-height: 100px;
@@ -49,16 +50,42 @@ a {
 .bg-white{
   background-color: var(--mic-compare);
 }
+.navbar{
+  background: transparent !important;
+  transition: all ease 0.5s;
+}
+
+.btn-primary{
+  background: var(--bg-light) !important;
+  color: var(--text-light) !important;
+}
+.black-purple{
+  background: var(--bg-light) !important;
+  color: var(--text-light) !important;
+}
+
+.black-purple a.nav-link, .black-purple a[rel="noreferrer"]{
+  color: var(--text-light) !important;
+}
 .flex-center{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  /* align-items: center; */
+  /* justify-content: center; */
   text-align: left;
+  /* height: 100vh; */
+}
+
+.full-height{
   height: 100vh;
 }
 
-.flex-row{
+.mb-60{
+  margin-bottom: 60px;
+}
+.mh-20{
+  margin: 0 20px !important;
+}
+.flex-inline{
   width: 60%;
   border-radius: 4px;
   display: flex;
@@ -68,15 +95,16 @@ a {
   /* box-shadow: 0 0 4px #222; */
 }
 
+.flex-start{
+  justify-content: flex-start;
+}
+
+.box-buttons{
+  display: flex;
+  flex-direction: column;
+}
 .flex{
   display: flex;
-}
-.list{
-  display: flex;
-  padding: 8px;
-  background: var(--bg-white);
-  border-radius: 4px;
-  margin: 8px;
 }
 .flex-between{
   justify-content: space-between;
@@ -84,6 +112,13 @@ a {
 .flex-text{
   width: 100%;
   margin-top: 14px;
+}
+.list{
+  display: flex;
+  padding: 8px;
+  background: var(--bg-white);
+  border-radius: 4px;
+  margin: 8px;
 }
 
 .button-circle {
@@ -112,16 +147,40 @@ a {
 /* Footer */
 footer.footer{
   display: flex !important;
-  justify-content: space-around;
-  padding: 8px 35px 4px 35px;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px 0;
+  text-align: center;
   background-color: var(--bg-dark);
-
   /* background: linear-gradient(to top, var(--bg-dark) 10%, transparent 90%); */
   color: var(--text-light);
-  position: fixed !important;
   width: 100%;
-  bottom: 0;
-  left: 0;
+}
+
+.footer.footer a{
+  color: var(--text-light);
+  text-decoration: none;
+}
+
+.footer.footer a:hover{
+  color: var(--text-light-2);
+  text-decoration: underline;
+}
+
+.article{
+  margin: 14px 0;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--bg-white);
+  padding: 12px;
+}
+.article span{
+  text-align: right;
+}
+.article button{
+  position: absolute;
+  right: 10px;
 }
 
 .informations{
@@ -138,6 +197,16 @@ footer.footer{
   font-size: 20px
 }
 .links a:hover{
+  color: var(--bg-light)
+}
+
+.links-outline > a{
+  color: var(--bg-dark);
+  text-decoration: none;
+  margin: 0 8px;
+  font-size: 20px
+}
+.links-outline a:hover{
   color: var(--bg-light)
 }
 
@@ -166,4 +235,89 @@ input:focus, textarea:focus, select:focus{
   background-color: var(--bg-white);
   box-shadow: inset 0 0 4px var(--border-black);
   border-radius: 4px;
+}
+
+.back-top{
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background-color: transparent;
+  color: transparent;
+  padding: 8px;
+  border-radius: 4px;
+  border: none;
+  transition: all ease 1s;
+}
+
+.on-top{
+  background-color: #6D6D6F;
+  color: var(--text-light);
+}
+
+.back-top:hover{
+  background-color: #8D8D8F;
+  color: var(--text-light-2);
+}
+
+.image{
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+.image img{
+  border-radius: 100px !important;
+}
+
+@media screen and (max-width: 650px)
+{
+  h1{
+    font-size: 22px !important;
+  }
+  h3{
+    font-size: 16px !important;
+  }
+  .box-buttons{
+    display: flex;
+    flex-direction: row;
+  }
+  .box-2{
+    width: 100%;
+  }
+  .flex-center{
+    height: auto;
+  }
+  .flex-inline{
+    display: flex;
+    flex-direction: column;
+  }
+  .table-responsive {
+      display: block;
+      position: relative;
+      width: 100%;
+  }
+
+  .table-responsive thead,
+  .table-responsive tbody,
+  .table-responsive th,
+  .table-responsive td,
+  .table-responsive tr {
+      display: block;
+  }
+  .table-responsive td,
+  .table-responsive th {
+      height: 35px;
+  }
+  .table-responsive thead {
+      float: left;
+  }
+  .table-responsive tbody {
+      width: auto;
+      position: relative;
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      white-space: nowrap;
+  }
+  .table-responsive tbody tr {
+      display : inline-block;
+  }
 }
