--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,6 +67,19 @@ a {
 .black-purple a.nav-link, .black-purple a[rel="noreferrer"]{
   color: var(--text-light) !important;
 }
+.mb-60{
+  margin-bottom: 60px;
+}
+.mh-20{
+  margin: 0 20px !important;
+}
+.flex-about{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 .flex-center{
   display: flex;
   flex-direction: column;
@@ -79,12 +92,6 @@ a {
   height: 100vh;
 }
 
-.mb-60{
-  margin-bottom: 60px;
-}
-.mh-20{
-  margin: 0 20px !important;
-}
 .flex-inline{
   width: 60%;
   border-radius: 4px;
@@ -96,7 +103,7 @@ a {
 }
 
 .flex-start{
-  justify-content: flex-start;
+  justify-content: flex-start !important;
 }
 
 .box-buttons{
