--- a/styles/globals.css
+++ b/styles/globals.css
@@ -139,6 +139,10 @@ a {
 .mh-20{
   margin: 0 20px !important;
 }
+.mh-x2{
+  margin-left: 2px;
+  margin-right: 2px;
+}
 
 .loading{
   display: flex;
@@ -224,20 +228,33 @@ a {
 }
 
 .list-phrase{
-  flex-direction: column;
-}
-.list-pronounce{
-  background-color: var(--bg-grey);
-  /* color: var(--bg-white); */
-  padding: 4px;
-  border-radius: 4px;
-}
-.list-pronounce strong{
-  margin-right: 4px;
+  flex: 1;
 }
 
-.list-pronounce span{
-  padding: 4px;
+.list-pronounce{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* background-color: var(--bg-grey); */
+  color: var(--bg-black);
+  font-weight: bolder;
+}
+.list-pronounce > div{
+  border: 1px solid #000;
+  border-radius: 3px;
+  padding: 0 6px;
+  
+}
+.shadow-success{
+  box-shadow: inset 0 0 6px #28a745;
+}
+.shadow-danger{
+  box-shadow: inset 0 0 6px #e24d4d;
+}
+
+.list-pronounce, .list-pronounce > div{
+  margin-right: 4px;
 }
 
 .button-circle {
@@ -332,6 +349,7 @@ footer.footer{
 
 input:focus, textarea:focus, select:focus{
   outline: none !important;
+  box-shadow: none !important;
 }
 
 .box-2{
@@ -351,12 +369,34 @@ input:focus, textarea:focus, select:focus{
   display: flex;
   flex-direction: column;
   margin: 34px 0;
-  padding: 8px;
   width: 100%;
   background-color: var(--bg-white);
-  box-shadow: inset 0 0 4px var(--border-black);
+  box-shadow: 0 0 4px var(--border-black);
   border-radius: 4px;
   word-wrap: break-word;
+}
+.speech-container label{
+  padding: 8px 8px 0 8px
+}
+
+.speech-container > .speech-buttons{
+  padding: 0 8px;
+}
+.speech-container .speech-reason{
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 8px;
+}
+
+.speech-container textarea{
+  border: none !important;
+  resize: none !important;
+  border-radius: 0 !important;
+  border-bottom: 1px solid var(--bg-dark) !important;
+}
+
+.speech-container hr{
+  color: var(--bg-dark);
 }
 
 .speech-success{
