--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -154,6 +154,19 @@ a {
   color: var(--bg-dark);
 }
 
+.loading-2{
+  position: absolute;
+  z-index: 2000;
+  background-color: rgba(45, 45, 45, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+}
+
 .flex-about{
   display: flex;
   flex-direction: column;
@@ -262,6 +275,25 @@ a {
 
 .list-pronounce, .list-pronounce > div{
   margin-right: 4px;
+}
+
+.histories{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  word-break: break-word;
+  color: #D8D8DF;
+  width: 100%;
+  height: 640px;
+}
+.histories-content{
+  margin: 0 26px;
+  padding: 4px;
+  font-size: 24px;
+  background: var(--bg-black);
+  border-radius: 4px;
+  box-shadow: 0 0 4px var(--bg-white);
 }
 
 .button-circle {
@@ -388,6 +420,9 @@ input:focus, textarea:focus, select:focus{
 
 .speech-container > .speech-buttons{
   padding: 0 8px;
+}
+.speech-container > .speech-buttons button{
+  margin: 0 2px;
 }
 .speech-container .speech-reason{
   padding-left: 8px;
