--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,8 @@
   --border-black: #2D2D2D;
   --bg-black: #29292A;
   --bg-grey: #D8D8DF;
-  --bg-white: #fEfEfE; 
+  --bg-white: #fEfEfE;
+  --bg-white-2: #EDEDEF; 
   --text-light: #FFF; 
   --text-light-2: #EDEDEF; 
   --mic-compare: #fDfDfD;
@@ -280,20 +281,36 @@ a {
 .histories{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  padding: 0 8px;
   word-break: break-word;
-  color: #D8D8DF;
+  color: var(--bg-white);
+  background: var(--bg-black);
   width: 100%;
-  height: 640px;
+  height: 50vh;
+  overflow-y: scroll;
 }
 .histories-content{
-  margin: 0 26px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+  margin: 8px;
   padding: 4px;
-  font-size: 24px;
-  background: var(--bg-black);
-  border-radius: 4px;
-  box-shadow: 0 0 4px var(--bg-white);
+}
+.histories-content-disabled{
+  opacity: 0.4;
+}
+.histories-content button{
+  min-height: 40px;
+}
+.histories-content div{
+  min-height: 40px;
+  background: var(--bg-white);
+  border-radius: 0 4px 4px 0;
+  /* box-shadow: 0 0 4px var(--bg-black); */
+  padding: 6px;
+  font-size: 18px;
+  color: var(--bg-black);
 }
 
 .button-circle {
@@ -471,11 +488,39 @@ input:focus, textarea:focus, select:focus{
   transition: all ease 1s;
 }
 
+.toggle-language{
+  display: flex;
+  color: var(--bg-white);
+}
+.toggle-language i{
+  color: var(--bg-light);
+}
+.toggle-language div{
+  opacity: 0.4;
+  padding: 6px 12px;
+  color: var(--bg-dark);
+  background: var(--bg-white);
+}
+.toggle-language button{
+  flex: 1;
+  border: none;
+  border-bottom: 1px solid var(--bg-light);
+  background: var(--bg-white);
+}
+
+.toggle-language button:hover{
+  background: var(--bg-white-2);
+}
+.active-language{
+  opacity: 1 !important;
+  font-weight: bold;
+  border-bottom: 1px solid var(--bg-light);
+}
+
 .on-top{
   background-color: #6D6D6F;
   color: var(--text-light);
 }
-
 .back-top:hover{
   background-color: #8D8D8F;
   color: var(--text-light-2);
