--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -279,6 +279,7 @@ a {
 }
 
 .histories{
+  margin-top: 12px;
   display: flex;
   flex-direction: column;
   padding: 0 8px;
@@ -286,14 +287,12 @@ a {
   color: var(--bg-white);
   background: var(--bg-black);
   width: 100%;
-  height: 50vh;
-  overflow-y: scroll;
 }
 .histories-content{
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  align-items: flex-end;
+  align-items: flex-start;
   margin: 8px;
   padding: 4px;
 }
