--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -289,6 +289,27 @@ a {
   background: url("../../public/images/black-370118_1280.png") no-repeat;
   width: 100%;
 }
+
+.histories-score{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+}
+.histories-score div{
+  margin: 0 6px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background: #5a2dcd;
+}
+.histories-score span{
+  margin-left: 4px;
+  padding: 0 8px;
+  border-radius: 4px;
+  background: var(--bg-white);
+  color: var(--bg-light);
+  font-weight: bolder;
+}
 .histories-content{
   display: flex;
   flex-direction: column;
@@ -525,12 +546,13 @@ input:focus, textarea:focus, select:focus{
 }
 
 .on-top{
-  background-color: #6D6D6F;
-  color: var(--text-light);
+  background-color: var(--bg-white);
+  color: var(--bg-dark);
 }
 .back-top:hover{
-  background-color: #8D8D8F;
+  background-color: var(--bg-dark);
   color: var(--text-light-2);
+  box-shadow: 0 0 4px var(--bg-black);
 }
 
 .button-fixed-left-down{
@@ -545,6 +567,58 @@ input:focus, textarea:focus, select:focus{
 }
 .image img{
   border-radius: 100px !important;
+}
+
+.links-vertical{
+  background-color: #5a2dcd;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 30vh;
+  box-shadow: 0 0 4px var(--border-black);
+}
+.link-vertical-item{
+  background-color: var(--bg-dark);
+  text-decoration: none;
+  flex: 1;
+  text-align: center;
+  padding-top: 4px;
+  color: var(--bg-white);
+}
+.link-vertical-item:nth-child(2){
+  background: url("../../public/images/the-imaginner.png") no-repeat;
+  background-size: 100% 100%;
+  box-shadow: inset 0 0 1px var(--border-black);
+}
+.link-vertical-item:first-child, .link-vertical-item:last-child{
+  background: url("../../public/images/black-370118_1280.png") no-repeat;
+}
+.link-vertical-item:hover{
+  cursor: pointer;
+  color: var(--bg-white);
+  font-weight: bold;
+  box-shadow: inset 0 0 24px var(--bg-white);
+  animation: ligthIn 0.5s ease-in;
+}
+
+.circle {
+  animation: 2s infinite alternate circle;
+}
+
+@keyframes circle {
+  from {
+    -webkit-clip-path: circle(0%);
+    clip-path: circle(0%);
+  }
+  to {
+    -webkit-clip-path: circle(100%);
+    clip-path: circle(100%);
+  }
+}
+
+@keyframes ligthIn{
+  from {box-shadow: inset 0 0 1px var(--border-black);}
+  to {box-shadow: inset 0 0 24px var(--bg-white);}
 }
 
 /* Animations */
@@ -574,6 +648,12 @@ input:focus, textarea:focus, select:focus{
   .flex-inline{
     display: flex;
     flex-direction: column;
+  }
+
+  .links-vertical{
+    display: flex;
+    flex-direction: column;
+    height: 90vh;
   }
 
   .flex-about{
