--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -130,7 +130,7 @@ a {
 
 .navbar-light .navbar-nav .active-link{
   font-weight: bold;
-  border-bottom: 1px solid var(--bg-light);
+  border-bottom: 1px solid var(--bg-white);
 }
 
 .black-purple .navbar-nav .nav-link, .black-purple a[rel="noreferrer"]{
@@ -208,14 +208,13 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 100vh;
 }
+
 .app-features{
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: flex-start;
-  list-style: none;
+  align-items: center;
   padding: 0;
   margin: 0;
 }
@@ -223,9 +222,9 @@ a {
 .app-features .app-features-card{
   display: flex;
   flex-direction: column;
-  width: 20%;
+  width: 100%;
   margin: 0 16px;
-  height: 200px;
+  height: 180px;
 }
 .app-features .app-features-card p{
   flex: 1;
@@ -257,6 +256,12 @@ a {
   /* box-shadow: 0 0 4px #222; */
 }
 
+.flex-columns{
+  display: flex;
+  flex-direction: column;
+  margin-right: 8px
+}
+
 .flex-start{
   justify-content: flex-start !important;
 }
@@ -266,6 +271,20 @@ a {
 }
 .flex-between{
   justify-content: space-between;
+}
+
+.speech-text{
+  width: 100%;
+  padding: 12px;
+  min-height: 30vh;
+  position: relative;
+}
+.speech-textarea{
+  position: relative;
+}
+.speech-text button{
+  position: absolute;
+  right: 10px;
 }
 .flex-text{
   width: 100%;
@@ -410,14 +429,28 @@ a {
 /* Footer */
 footer.footer{
   display: flex !important;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+  flex-direction: row;
   padding: 20px 0;
   text-align: center;
   background-color: var(--bg-dark);
   /* background: linear-gradient(to top, var(--bg-dark) 10%, transparent 90%); */
   color: var(--text-light);
   width: 100%;
+}
+
+.footer ul{
+  list-style: none;
+  margin: auto 0;
+  text-align: center;
+  padding: 0;
+  background: transparent;
+}
+.footer ul li{
+  display: inline;
+}
+.footer ul li a{
+  padding: 8px;
 }
 
 .footer.footer a{
@@ -490,7 +523,7 @@ input:focus, textarea:focus, select:focus{
 .speech-container{
   display: flex;
   flex-direction: column;
-  margin: 34px 0;
+  /* margin: 34px 0; */
   width: 100%;
   background-color: var(--bg-white);
   box-shadow: 0 0 4px var(--border-black);
@@ -498,7 +531,10 @@ input:focus, textarea:focus, select:focus{
   word-wrap: break-word;
 }
 .speech-container label{
-  padding: 8px 8px 0 8px
+  padding-left: 8px;
+  padding-top: 4px;
+  margin: 0;
+  color: var(--border-black);
 }
 
 .speech-container > .speech-buttons{
@@ -513,11 +549,11 @@ input:focus, textarea:focus, select:focus{
   padding-bottom: 8px;
 }
 
-.speech-container textarea{
+.textarea-pretty{
   border: none !important;
   resize: none !important;
   border-radius: 0 !important;
-  border-bottom: 1px solid var(--bg-dark) !important;
+  border-bottom: 1px solid var(--bg-light) !important;
 }
 
 .speech-container hr{
@@ -686,6 +722,15 @@ input:focus, textarea:focus, select:focus{
   .flex-inline{
     display: flex;
     flex-direction: column;
+  }
+
+  .app-features{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+  }
+  .app-features .app-features-card{
+    width: auto;
   }
 
   .links-vertical{
